@@ -1,11 +1,0 @@
-.LP
-By default, standard output from each node specified will be output
-with the hostname prepended to each line.  Although this output is
-readable in many situations, it may be difficult to read in other
-situations. For example, output from multiple nodes may be mixed
-together.  The \fB\-B\fR and \fB\-C\fR options can be used to change
-this default.  
-.LP
-In-band IPMI Communication will be used when the host "localhost" is
-specified.  This allows the user to add the localhost into the
-hostranged output.
